PRF-513: fixed the stretched images in card.

--- a/src/main/webapp/src/scss/main/minisite/foxtel-now/components/card.scss
+++ b/src/main/webapp/src/scss/main/minisite/foxtel-now/components/card.scss
@@ -18,6 +18,11 @@
 	margin-left: 15px;
 	margin-bottom: 27px;
 	text-align: center;
+	>img {
+	    width: 32px;
+	    height: auto;
+	    margin: 0 auto;
+	}
 }
 
 .foxtel-now-card--basic {
